# smart-receipt-assistant

./: README.md  market_app.py  pyproject.toml
.github/workflows/: ci.yml
agents/: invoice_agent.py  report_workflow.py  report_writer_agent.py  sql_agent.py  supervisor_agent.py
pages/: dashboard.py  receipt_reader.py  report.py  smart_cart.py
src/: config.py  dashboard_utils.py  database.py  invoice_agent.py  prompt_template.py  receipt_processing.py  sql_commands.py  sql_query.py
tests/: __init__.py  conftest.py  mock_config.py  test_database.py  test_invoice_agent_graph.py  test_invoice_agent_nodes.py  test_invoice_agent_router.py
